--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -5,7 +5,7 @@
 }
 
 
-@media only screen and (max-width: 600px)  {
+@media only screen and (max-width: 900px)  {
   .nav_container{
   display:none;
   }
